@@ -9,12 +9,17 @@ import java.io.OutputStream;
 
 public class loginHandler implements HttpHandler {
     private static final int TokenLifeSpanMinutes = 10;
+
     @Override
     public void handle(HttpExchange exchange) throws IOException {
+        //System.out.println( "c'mon " + exchange.getRequestHeaders().get("Authorization").getLast()); //Basic YWRtaW46MTIzNA==
+        //System.out.println( "d'mon " +exchange.getRequestHeaders().get("Authorization").get(0).split(" ")[1] );; //Basic YWRtaW46MTIzNA==
+
         String response = null;
-        System.out.println("Brother serah");
-        try{
-            String Base64EncodedCredentials = exchange.getRequestHeaders().get("Authorization").get(0).split(" ")[1];
+        try {
+            String Base64EncodedCredentials = exchange.getRequestHeaders().get("Authorization").get(0).split(" ")[1]; //todo
+            //String Base64EncodedCredentials = exchange.getRequestHeaders().get("Authorization").getFirst(); //todo
+
             JWTtoken tmp = new JWTtoken(Base64EncodedCredentials, TokenLifeSpanMinutes);
             response = tmp.toString();
         } catch (Exception e) {
@@ -31,39 +36,45 @@ public class loginHandler implements HttpHandler {
         exchange.close();
     }
 
-    private static String validateAndGetToken(String s){
+    private static String validateAndGetToken(String s) {
         String slist[] = s.split(" ");
-        if(slist.length != 2 || !slist[0].equals("Bearer"))return "";
+        if (slist.length != 2 || !slist[0].equals("Bearer")) return "";
         return slist[1];
     }
 
-    public static boolean isAuthenticated(HttpExchange t)throws IOException{
+    public static boolean isAuthenticated(HttpExchange t) throws IOException {
         boolean valid = true;
         var keys = t.getRequestHeaders();
-        if(!keys.containsKey("Authorization"))valid = false;
+
+       // System.out.println( "amar bhul " + keys.get("Authorization").getFirst());
+
+        if (!keys.containsKey("Authorization")) valid = false;
 
         String tokenString = "";
-        if(valid)
-            tokenString = validateAndGetToken(keys.get("Authorization").get(0));
-        if(tokenString.isEmpty())valid = false;
+        if (valid){
+            tokenString = validateAndGetToken(keys.get("Authorization").get(0));//TODO
+          //  tokenString = validateAndGetToken(keys.get("Authorization").getFirst() );//TODO
+        }
 
-        if(valid){
-            try{
+        if (tokenString.isEmpty()) valid = false;
+
+        if (valid) {
+            try {
                 JWTtoken tmpToken = new JWTtoken(tokenString);
                 valid = tmpToken.verify();
-                if(valid){
+                if (valid) {
                     long seconds = tmpToken.remainingSeconds();
-                    System.out.println("TOKEN VALIDITY: " + seconds/60 + " minutes and " + seconds%60 + " seconds remaining");
+                    System.out.println("TOKEN VALIDITY: " + seconds / 60 + " minutes and " + seconds % 60 + " seconds remaining");
                 }
-            }catch (Exception e){
+            } catch (Exception e) {
                 System.out.println("JWT token authentication error: " + e);
                 valid = false;
             }
         }
 
-        if(!valid){
+        if (!valid) {
             String response = "This action is unauthorized\nAuthorization token missing/expired";
-            t.sendResponseHeaders(403,response.length());
+            t.sendResponseHeaders(403, response.length());
             OutputStream os = t.getResponseBody();
             os.write(response.getBytes());
             os.close();
